# Notes-Assistant

./: .env.example  .gitignore  README.md  app.py  google_drive.py  pyproject.toml  setup_google_auth.py
